--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^5.6.2",
     "hardhat": "^2.9.2",
+    "ipfs-http-client": "^56.0.1",
     "next": "12.1.2",
     "react": "18.0.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.0.0",
     "react-file-drop": "^3.1.3",
+    "recoil": "^0.6.1",
     "sass": "^1.49.10"
   },
   "devDependencies": {
